--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "supertest": "^3.0.0",
     "tslint": "^5.5.0",
     "tslint-config-standard": "^7.0.0",
+    "urlencode": "^1.1.0",
     "webdriverio": "^4.11.0"
   },
   "nyc": {
