--- a/docker-compose.smoke-tests.yml
+++ b/docker-compose.smoke-tests.yml
@@ -15,6 +15,7 @@ services:
         - SMOKE_TEST_CITIZEN_USERNAME
         - SMOKE_TEST_USER_PASSWORD
         - HEALTHCHECK_CITIZEN=true
+        - CHUNKS=1
       volumes:
         - ./smoke-output:/usr/src/app/output
     remote-webdriver:
