--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
-
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-
 language: node_js
 cache: yarn
 script:
   - yarn --version
   - yarn check --integrity
   - yarn setup
-#   - yarn lint
-#   - yarn test
-#   - yarn test:routes
+  - yarn lint
+  - yarn test
+  - yarn test:routes
   - yarn test:a11y
-#   - yarn test:coverage-unit
-# after_success:
-#   - yarn test:codacy-upload
-#   - yarn test:codecov-upload
+  - yarn test:coverage-unit
+after_success:
+  - yarn test:codacy-upload
+  - yarn test:codecov-upload
