Initial draft for claimant response

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -89,6 +89,9 @@
       "response/*": [
         "main/features/response/*"
       ],
+      "claimant-response/*": [
+        "main/features/claimant-response/*"
+      ],
       "offer/*": [
         "main/features/offer/*"
       ],
