--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@types/i18next": "^8.4.1",
     "@types/i18next-express-middleware": "^0.0.33",
     "@types/i18next-sprintf-postprocessor": "^0.0.29",
-    "@types/lodash": "^4.14.52",
+    "@types/lodash": "^4.14.115",
     "@types/nock": "^9.1.0",
-    "@types/node": "^9.3.0",
+    "@types/node": "<10.0.0",
     "@types/nunjucks": "^3.0.0",
     "@types/request-promise-native": "^1.0.2",
     "@types/shortid": "^0.0.29",
@@ -73,7 +73,7 @@
     "i18next-sprintf-postprocessor": "^0.2.2",
     "jquery": "3.3.1",
     "js-base64": "^2.3.2",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "mime": "^2.0.3",
     "moment": "^2.18.1",
     "moment-precise-range-plugin": "^1.3.0",
@@ -89,8 +89,8 @@
     "string.prototype.startswith": "^0.2.0",
     "to-boolean": "^1.0.0",
     "ts-node": "^7.0.0",
-    "tsconfig-paths": "^3.1.1",
-    "typescript": "^2.4.2",
+    "tsconfig-paths": "^3.5.0",
+    "typescript": "^3.0.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
@@ -133,8 +133,8 @@
     "sinon-express-mock": "^2.0.0",
     "sonarqube-scanner": "^2.0.1",
     "supertest": "^3.0.0",
-    "tslint": "^5.5.0",
-    "tslint-config-standard": "^7.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^7.1.0",
     "urlencode": "^1.1.0",
     "webdriverio": "^4.13.1"
   },
