--- a/docker-compose.smoke-tests.yml
+++ b/docker-compose.smoke-tests.yml
@@ -14,6 +14,7 @@ services:
         - OAUTH2_CLIENT_SECRET
         - SMOKE_TEST_CITIZEN_USERNAME
         - SMOKE_TEST_USER_PASSWORD
+        - CLAIM_STORE_URL
         - HEALTHCHECK_CITIZEN=true
         - CHUNKS=1
       volumes:
