Changes to citizen frontend to call the FeatureTogglesClient service instead of the FeatureToggleClient as the client has been made into an npm module

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@hmcts/nodejs-logging": "^3.0.0",
     "@hmcts/postcodeinfo-client": "^1.1.0",
     "@hmcts/requestretry": "^1.1.2",
+    "@hmcts/feature-toggle-client":"^1.0.0",
     "@types/config": "^0.0.34",
     "@types/cookies": "^0.7.1",
     "@types/csurf": "^1.9.33",
