Added feature toggle on paid-in-full, and start of draft.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -92,6 +92,9 @@
       "claimant-response/*": [
         "main/features/claimant-response/*"
       ],
+      "paid-in-full/*": [
+        "main/features/paid-in-full/*"
+      ],
       "offer/*": [
         "main/features/offer/*"
       ],
