--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -4,18 +4,19 @@ metadata:
   name: ${SERVICE_NAME}-config
   namespace: ${NAMESPACE}
 data:
-  FRONTEND_BASE_URL : "https://moneyclaims.aat.platform.hmcts.net"
-  DOCUMENT_MANAGEMENT_URL : "false"
-  IDAM_S2S_AUTH_URL : "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-  SPRING_MAIL_HOST : "mta.reform.hmcts.net"
-  REFORM_ENVIRONMENT : "preview"
-  CORE_CASE_DATA_API_URL : "false"
-  APPLICATION_INSIGHTS_IKEY : "4d7922fc-7d37-4278-b542-6ac8fe0408e2"
-  CMC_DB_HOST : "cmc-aat.postgres.database.azure.com"
-  SEND_LETTER_URL : "http://rpe-send-letter-service-aat.service.core-compute-aat.internal"
-  RESPOND_TO_CLAIM_URL : "https://moneyclaims.aat.platform.hmcts.net/first-contact/start"
-  CLAIM_STORE_DB_HOST : "preprod-data-lb.moneyclaim.reform.hmcts.net"
-  IDAM_API_URL : "https://preprod-idamapi.reform.hmcts.net:3511"
-  APPINSIGHTS_INSTRUMENTATIONKEY : "4d7922fc-7d37-4278-b542-6ac8fe0408e2"
-  PDF_SERVICE_URL : "http://cmc-pdf-service-aat.service.core-compute-aat.internal"
-  CMC_DB_USERNAME : "cmc@cmc-aat"
+
+  # Ive calculated from application settings in existing citizen-frontend deployment to ASE
+  # there are more... that ive not included that I think we will need, e.g. DRAFT_STORE_SECRET_PRIMARY
+  # was going to try with minimal from docker-compose first and incrementally add
+
+  NODE_ENV: dev                 # im unsure here - this will depend I think? demo - if demo, dev - if PR
+  IDAM_API_URL: https://preprod-idamapi.reform.hmcts.net:3511
+  IDAM_AUTHENTICATION_WEB_URL: https://idam.preprod.ccidam.reform.hmcts.net
+  IDAM_S2S_AUTH: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+  PAY_URL: http://payment-api-aat.service.core-compute-aat.internal
+  CLAIM_STORE_URL: http://cmc.?  # k8s service - able to point to specific PR deployment
+  FEES_URL: http://fees-register-api-aat.service.core-compute-aat.internal        
+  DRAFT_STORE_URL: http://draft-store-service-aat.service.core-compute-aat.internal
+  FEATURE_TOGGLES_API_URL: http://rpe-feature-toggle-api-aat.service.core-compute-aat.internal
+  POSTCODE_LOOKUP_API_KEY: f7aca590ce1da8c64c9ed11b9678265f86f81209
+  UV_THREADPOOL_SIZE: 64
