fixing buildUrl to include k8s path

--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -15,4 +15,4 @@ data:
   POSTCODE_LOOKUP_API_KEY: ${POSTCODE_LOOKUP_API_KEY}
   APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
   UV_THREADPOOL_SIZE: "64"
-  CITIZEN_APP_URL: https://${AKS_DOMAIN}/${SERVICE_NAME}
+  APPLICATION_CONTEXT: "${SERVICE_NAME}"
