--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       dnsConfig:
         options:
-        - name: use-vc
+        - name: single-request-reopen
       containers:
         - image: ${IMAGE_NAME}
           name: ${SERVICE_NAME}
