--- a/docker-compose.functional-tests.yml
+++ b/docker-compose.functional-tests.yml
@@ -11,7 +11,7 @@ services:
         - https_proxy=http://proxyout.reform.hmcts.net:8080
         - no_proxy=remote-webdriver
         - IDAM_URL
-        - OAUTH2_CLIENT_SECRET
+        - OAUTH_CLIENT_SECRET
         - CLAIM_STORE_URL
         - HEALTHCHECK_CITIZEN=true
       volumes:
