--- a/docker-compose.smoke-tests.yml
+++ b/docker-compose.smoke-tests.yml
@@ -11,7 +11,7 @@ services:
         - https_proxy=http://proxyout.reform.hmcts.net:8080
         - no_proxy=remote-webdriver
         - IDAM_URL
-        - OAUTH2_CLIENT_SECRET
+        - OAUTH_CLIENT_SECRET
         - SMOKE_TEST_CITIZEN_USERNAME
         - SMOKE_TEST_USER_PASSWORD
         - CLAIM_STORE_URL
