--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -63,7 +63,7 @@ spec:
             - name: FEATURE_RETURN_ERROR_TO_USER
               value: 'true'
             - name: FEATURE_MOCK_PAY
-              value: 'true'
+              value: 'false'
             - name: POSTCODE_LOOKUP_API_KEY
               value: ${POSTCODE_LOOKUP_API_KEY}
             - name: APPINSIGHTS_INSTRUMENTATIONKEY
