--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jquery": "3.3.1",
     "js-base64": "^2.4.9",
     "lodash": "^4.17.11",
+    "memory-cache" :"^0.2.0",
     "mime": "^2.3.1",
     "moment": "^2.22.2",
     "moment-precise-range-plugin": "^1.3.0",
