--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - yarn setup
   - yarn lint
   - yarn test
-  - yarn test:routes
+  - yarn test:routes-parallel
   - yarn test:a11y
   - yarn test:coverage-unit
 after_success:
