--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -11,3 +11,4 @@ data:
   CLAIM_STORE_URL: http://cmc-claim-store-aat.service.core-compute-aat.internal
   FEES_URL: http://fees-register-api-aat.service.core-compute-aat.internal
   DRAFT_STORE_URL: http://draft-store-service-aat.service.core-compute-aat.internal
+  PDF_SERVICE_URL: http://cmc-pdf-service-aat.service.core-compute-aat.internal
