demo feature-toggle-api

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -53,7 +53,7 @@ spec:
             - name: REPORT_PROBLEM_SURVEY_URL
               value: 'http://www.smartsurvey.co.uk/s/CMCMVPPB/'
             - name: FEATURE_TOGGLES_API_URL
-              value: 'http://feature-toggle-api:8580'
+              value: 'http://rpe-feature-toggle-api-demo.service.core-compute-demo.internal'
             - name: FEATURE_TESTING_SUPPORT
               value: 'true'
             - name: FEATURE_NEW_FEATURES_CONSENT
@@ -137,118 +137,3 @@ spec:
         backend:
           serviceName: ${SERVICE_NAME}
           servicePort: 80
----
-#
-# FEATURE-TOGGLES CONFIG
-#
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: feature-toggle-api
-  namespace: ${NAMESPACE}
-data:
-  JAVA_OPTS: -Xms8m -Xmx256m -Djava.security.egd=file:/dev/./urandom -XX:MaxMetaspaceSize=128m
-  APPINSIGHTS_INSTRUMENTATIONKEY: 'fake-key'
-  FLYWAY_ENABLED: 'true'
-  FLYWAY_NOOP_STRATEGY: 'false'
-  FEATURES_DB_HOST: 'shared-database'
-  FEATURES_DB_CONN_OPTIONS: ''
-  FEATURES_DB_USER_NAME: 'features'
-  FEATURES_DB_PASSWORD: 'features'
-  TEST_ADMIN_USERNAME: 'admin@example.com'
-  TEST_ADMIN_PASSWORD: 'Password12'
-  TEST_EDITOR_USERNAME: 'editor@example.com'
-  TEST_EDITOR_PASSWORD: 'Password12'
-  ROOT_LOGGING_LEVEL: ''
-  LOGBACK_REQUIRE_THREAD: 'false'
-  LOGBACK_REQUIRE_ALERT_LEVEL: 'false'
-  LOGBACK_REQUIRE_ERROR_CODE: 'false'
----
-#
-# FEATURE-TOGGLES
-#
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: feature-toggle-api
-  namespace: ${NAMESPACE}
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: feature-toggle-api
-  template:
-    metadata:
-      labels:
-        app: feature-toggle-api
-    spec:
-      containers:
-      - image: hmcts/feature-toggle-api
-        name: feature-toggle-api
-        envFrom:
-        - configMapRef:
-            name: feature-toggle-api
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "200m"
-          limits:
-            memory: "1024Mi"
-            cpu: "2500m"
-        ports:
-        - containerPort: 8580
-          name: http
-        imagePullPolicy: Always
-
----
-#
-# SHARED-DATABASE
-#
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: shared-database-initdb
-  namespace: ${NAMESPACE}
-data:
-  initdb.sql: |
-    CREATE USER features WITH PASSWORD 'features';
-    CREATE DATABASE features WITH OWNER = features ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: shared-database
-  namespace: ${NAMESPACE}
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: shared-database
-  template:
-    metadata:
-      labels:
-        app: shared-database
-    spec:
-      containers:
-      - image: postgres:10.5-alpine
-        name: shared-database
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "200m"
-          limits:
-            memory: "1024Mi"
-            cpu: "1000m"
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 5432
-          name: postgres
-        volumeMounts:
-        - mountPath: /docker-entrypoint-initdb.d
-          name: initdb
-          readOnly: true
-      volumes:
-      - name: initdb
-        configMap:
-          name: shared-database-initdb
