fix claim-store vars

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -301,8 +301,8 @@ data:
   JSON_CONSOLE_PRETTY_PRINT: ''
   ROOT_LOGGING_LEVEL: ''
   REFORM_SERVICE_NAME: 'claim-store'
-  REFORM_TEAM: ''
-  REFORM_ENVIRONMENT: ''
+  REFORM_TEAM: 'cmc'
+  REFORM_ENVIRONMENT: 'aat'
   IDAM_CASEWORKER_ANONYMOUS_USERNAME: 'civilmoneyclaims+anonymouscitizen@gmail.com'
   IDAM_CASEWORKER_ANONYMOUS_PASSWORD: 'Password12'
   IDAM_CASEWORKER_SYSTEM_USERNAME: 'civilmoneyclaims+systemupdate@gmail.com'
