fix typo in deployment template

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -313,7 +313,7 @@ data:
   IDAM_CASEWORKER_SYSTEM_PASSWORD: 'Password12'
   SEND_LETTER_URL: 'false'
   APPINSIGHTS_INSTRUMENTATIONKEY: 'fake-key'
-  OAUTH2_CLIENT_SECRET: '${OAUTH_CLIENT_SECRET}',
+  OAUTH2_CLIENT_SECRET: '${OAUTH_CLIENT_SECRET}'
   FEATURE_TOGGLES_API_URL: 'http://feature-toggle-api:8580'
   RESPOND_TO_CLAIM_URL: 'https://${SERVICE_FQDN}/first-contact/start'
   GOV_NOTIFY_API_KEY: '${GOV_NOTIFY_API_KEY}'
