add s2s_totp_secret to claim-store

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -318,6 +318,8 @@ data:
   RESPOND_TO_CLAIM_URL: 'https://${SERVICE_FQDN}/first-contact/start'
   GOV_NOTIFY_API_KEY: '${GOV_NOTIFY_API_KEY}'
   CLAIM_STORE_S2S_SECRET: '${CLAIM_STORE_S2S_SECRET}'
+  PDF_SERVICE_URL: 'http://pdf-service-api:5500'
+  IDAM_S2S_TOTP_SECRET: '${IDAM_S2S_TOTP_SECRET}'
 ---
 #
 # CLAIM-STORE
