--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -12,3 +12,4 @@ data:
   IDAM_S2S_AUTH_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
   PAY_URL: 'http://payment-api-aat.service.core-compute-aat.internal'
   FEES_URL: 'http://fees-register-api-aat.service.core-compute-aat.internal'
+  PDF_SERVICE_URL: http://cmc-pdf-service-aat.service.core-compute-aat.internal
