--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -306,7 +306,7 @@ data:
   ROOT_LOGGING_LEVEL: ''
   REFORM_SERVICE_NAME: 'claim-store'
   REFORM_TEAM: 'cmc'
-  REFORM_ENVIRONMENT: 'aat'
+  REFORM_ENVIRONMENT: 'preview'
   IDAM_CASEWORKER_ANONYMOUS_USERNAME: 'civilmoneyclaims+anonymouscitizen@gmail.com'
   IDAM_CASEWORKER_ANONYMOUS_PASSWORD: 'Password12'
   IDAM_CASEWORKER_SYSTEM_USERNAME: 'civilmoneyclaims+systemupdate@gmail.com'
@@ -319,7 +319,7 @@ data:
   GOV_NOTIFY_API_KEY: '${GOV_NOTIFY_API_KEY}'
   CLAIM_STORE_S2S_SECRET: '${CLAIM_STORE_S2S_SECRET}'
   PDF_SERVICE_URL: 'http://pdf-service-api:5500'
-  IDAM_S2S_TOTP_SECRET: '${IDAM_S2S_TOTP_SECRET}'
+  IDAM_S2S_TOTP_SECRET: '${CLAIM_STORE_S2S_SECRET}'
 ---
 #
 # CLAIM-STORE
@@ -535,7 +535,7 @@ spec:
         - name: REFORM_TEAM
           value: 'cmc'
         - name: REFORM_ENVIRONMENT
-          value: 'aat'
+          value: 'preview'
         envFrom:
         - configMapRef:
             name: ${SERVICE_NAME}-config
