--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -1,12 +1,5 @@
-# Example Kubernetes resource template
 #
-# All variables are replaced at deployment time with environment variables.
-#
-# The following variables are derived as follows by the pipeline. DO NOT CHANGE:
-#
-#   - NAMESPACE:    product
-#   - SERVICE_NAME: product-component-branch
-#   - IMAGE_NAME:   registry-name/hmcts/product-component:branch
+# CMC-FRONTEND
 #
 ---
 apiVersion: apps/v1
@@ -30,11 +23,6 @@ spec:
       containers:
       - image: ${IMAGE_NAME}
         name: ${SERVICE_NAME}
-        # These are obtained from environment variables.  If it's
-        # an environment variable, it can be used here.  Projects
-        # would usually source custom values from:
-        #   - Jenkins Azure Keyvault plugin (e.g. secrets)
-        #   - Your project's Jenkinsfile
         env:
         - name: REFORM_TEAM
           value: 'cmc'
@@ -91,7 +79,6 @@ spec:
         envFrom:
         - configMapRef:
             name: ${SERVICE_NAME}-config
-        # These may be adjusted, but be mindful please
         resources:
           requests:
             memory: "256Mi"
@@ -99,15 +86,11 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "1"
-          # This is the port your process is listening on in the container
         ports:
         - containerPort: 3000
           name: http
         imagePullPolicy: Always
 ---
-#
-# Service
-#
 apiVersion: v1
 kind: Service
 metadata:
@@ -124,9 +107,6 @@ spec:
   selector:
     app: ${SERVICE_NAME}
 ---
-#
-# Ingress
-#
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -145,7 +125,7 @@ spec:
           servicePort: 80
 ---
 #
-# FEATURE-TOGGLES CONFIG
+# FEATURE-TOGGLES
 #
 apiVersion: v1
 kind: ConfigMap
@@ -165,14 +145,10 @@ data:
   TEST_ADMIN_PASSWORD: 'Password12'
   TEST_EDITOR_USERNAME: 'editor@example.com'
   TEST_EDITOR_PASSWORD: 'Password12'
-  ROOT_LOGGING_LEVEL: ''
   LOGBACK_REQUIRE_THREAD: 'false'
   LOGBACK_REQUIRE_ALERT_LEVEL: 'false'
   LOGBACK_REQUIRE_ERROR_CODE: 'false'
 ---
-#
-# FEATURE-TOGGLES
-#
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -219,6 +195,31 @@ spec:
   selector:
     app: feature-toggle-api
   clusterIP: None
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: feature-toggle-importer
+  namespace: ${NAMESPACE}
+spec:
+  template:
+    metadata:
+      labels:
+        app: feature-toggle-importer
+    spec:
+      containers:
+      - image: hmcts/cmc-feature-toggle-importer
+        name: feature-toggle-importer
+        imagePullPolicy: Always
+        env:
+        - name: WAIT_HOSTS
+          value: 'feature-toggle-api:8580'
+        - name: VERBOSE
+          value: 'true'
+        - name: WAIT_HOSTS_TIMEOUT
+          value: '300'
+      restartPolicy: Never
+  backoffLimit: 4
 ---
 #
 # SMTP-SERVER
@@ -270,7 +271,7 @@ spec:
   clusterIP: None
 ---
 #
-# CLAIM-STORE CONFIG
+# CLAIM-STORE
 #
 apiVersion: v1
 kind: ConfigMap
@@ -302,8 +303,6 @@ data:
   CORE_CASE_DATA_API_URL: 'false'
   FEATURE_TOGGLE_CORE_CASE_DATA: 'true'
   ROOT_APPENDER: 'CMC'
-  JSON_CONSOLE_PRETTY_PRINT: ''
-  ROOT_LOGGING_LEVEL: ''
   REFORM_SERVICE_NAME: 'claim-store'
   REFORM_TEAM: 'cmc'
   REFORM_ENVIRONMENT: 'preview'
@@ -317,13 +316,9 @@ data:
   FEATURE_TOGGLES_API_URL: 'http://feature-toggle-api:8580'
   RESPOND_TO_CLAIM_URL: 'https://${SERVICE_FQDN}/first-contact/start'
   GOV_NOTIFY_API_KEY: '${GOV_NOTIFY_API_KEY}'
-  CLAIM_STORE_S2S_SECRET: '${CLAIM_STORE_S2S_SECRET}'
   PDF_SERVICE_URL: 'http://pdf-service-api:5500'
-  IDAM_S2S_TOTP_SECRET: '${CLAIM_STORE_S2S_SECRET}'
+  IDAM_S2S_AUTH_TOTP_SECRET: '${CLAIM_STORE_S2S_SECRET}'
 ---
-#
-# CLAIM-STORE
-#
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -505,7 +500,7 @@ spec:
   clusterIP: None
 ---
 #
-# PDF-SERVICE-STORE
+# PDF-SERVICE
 #
 apiVersion: apps/v1
 kind: Deployment
